# rtic-scope

./: .gitignore  Cargo.toml  ref.bib  scratch.org  shell.nix  thesis.org
daemon/: Cargo.toml
daemon/src/: main.rs  recovery.rs
rtic-apps/: Cargo.toml
rtic-apps/src/: lib.rs
rtic-scope/: Cargo.toml  openocd.gdb
rtic-scope/.cargo/: config
rtic-scope/adhoc-lib/: Cargo.toml
rtic-scope/adhoc-lib/src/: lib.rs
rtic-scope/examples/: tracing.rs
rtic-scope/libadhoc/: Cargo.toml
rtic-scope/libadhoc/src/: lib.rs
rtic-scope/playground/: Cargo.toml  Embed.toml  openocd.gdb  probe.gdb
rtic-scope/playground/examples/: itm.rs
rtic-scope/playground/src/: main.rs
rtic-scope/scope/: Cargo.toml
rtic-scope/scope/src/: lib.rs  main.rs  recovery.rs
rtic-scope/src/: main.rs
rtic-sw-task-trace/: Cargo.toml
rtic-sw-task-trace/src/: lib.rs
scope/: Cargo.toml
scope/src/: recovery.rs
