[package]
name = "rtic-scope"
version = "0.1.0"
authors = ["Viktor Sonesten <v@tmplt.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
probe-rs = "0.10.1"
anyhow = "1.0"
structopt = "0.3"
# addr2line = "0.14.1"
object = "0.23.0"
gimli = "0.23.0"
fallible-iterator = "0.2.0"
rtic-syntax = { git = "https://github.com/rtic-rs/rtic-syntax.git" }
syn = "1"
proc-macro2 = "1"
quote = "1"
libloading = "0.7"
tempfile = "3"
include_dir = { git = "https://github.com/tmplt/include_dir.git" }


[dependencies.rtic-trace]
path = "../rtic-trace"
default-features = false
features = [ "parsing" ]

[dependencies.probe-rs-cli-util]
version = "0.10.1"
default-features = false

[dependencies.cargo]
version = "0.52"
