[package]
name = "rtic-scope"
version = "0.1.0"
authors = ["Viktor Sonesten <v@tmplt.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.6"
panic-halt = "0.2"
cortex-m-rtic = "0.5.5"

[dependencies.stm32f4]
version = "0.12.1"
features = ["stm32f401", "rt"]