[package]
name = "adhoc-scope"
version = "0.1.0"
authors = ["Viktor Sonesten <v@tmplt.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
probe-rs = "0.10.1"
anyhow = "1.0"

[dependencies.probe-rs-cli-util]
version = "0.10.1"
default-features = false