[package]
name = "adhoc-probes"
version = "0.1.0"
authors = ["Viktor Sonesten <v@tmplt.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
probe-rs = "0.10.1"
anyhow = "1.0"
structopt = "0.3"
# addr2line = "0.14.1"
object = "0.23.0"
gimli = "0.23.0"
fallible-iterator = "0.2.0"
rtic-syntax = { git = "https://github.com/rtic-rs/rtic-syntax.git" }
syn = "1"
proc-macro2 = "1"
quote = "1"
libloading = "0.7"
tempdir = "0.3"
include_dir = "0.6"

[dependencies.probe-rs-cli-util]
version = "0.10.1"
default-features = false

[dependencies.cargo]
version = "0.52"
